<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4C4C4 "
    tools:context=".Update_Ads">

    <androidx.cardview.widget.CardView
        android:layout_width="348dp"
        android:layout_height="818dp"
        app:cardCornerRadius="20dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTittleAds"
                android:layout_width="348dp"
                android:layout_height="33dp"
                android:background="#FBC22F"
                android:text="@string/actualizar_anuncio"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:text="@string/ingresar_titulo_del_anuncio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleAds" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="262dp"
                android:layout_height="35dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="58dp"
                app:boxBackgroundColor="#EFEFEF"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingresar_la_descripci_n_del_anuncio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/salario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="41dp"
                android:text="@string/cargo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="263dp"
                android:layout_height="38dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="58dp"
                app:boxBackgroundColor="#EFEFEF"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="266dp"
                android:layout_height="37dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="58dp"
                app:boxBackgroundColor="#EFEFEF"
                app:boxCornerRadiusTopEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="266dp"
                android:layout_height="49dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="58dp"
                app:boxBackgroundColor="#EFEFEF"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="34dp"
                android:text="@string/este_anucio_ser_visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <TextView
                android:id="@+id/tvEditAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="327dp"
                android:layout_marginEnd="55dp"
                android:text="@string/editarAd"
                android:textColor="#FFC107"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="146dp"
                android:text="@string/cerrar"
                android:textColor="#FF0000"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvEditAd"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>